logs/desktop_commander_server_0_20251004_231245.log
  File "E:\ECHO_XV4\MLS\servers\desktop_commander_server.py", line 434
    {"" if "crud" not in features else '''
                                          ^
SyntaxError: f-string: expecting '}'
